syntax = "proto3";

option go_package = "github.com/felipedsf/go-payment/auth/proto/pb";

service AuthService {
  rpc GetToken(Credentials) returns (Token) {}
  rpc ValidateToken(Token) returns (User) {}
}

message Token {
  string jwt = 1;
}

message Credentials {
  string userName = 1;
  string userPass = 2;
}

message User {
  string userID = 1;
}